Reusing frmCreateWO (no longer an appropriate name) for the first four menu items (create, active, approve, and more info), with return back to the appropriate place.  Use of passed in WO object is a little squirrelly because there is no underlying data structure, but it does distinguish between new and existing WO's for future use.

--- a/lua_widget_m4_info.properties
+++ b/lua_widget_m4_info.properties
@@ -1,5 +1,5 @@
 #This file contains the lua m4Constants, the widgetQualifying ids and the type of the widget
-#Wed May 28 15:57:00 EDT 2014
+#Wed May 28 17:53:04 EDT 2014
 ~|~frmDowntime.HBox0c75f81874c1f42=box
 ~|~frmValveInspection.HBox0b56740eae09645=box
 ~|~popTimePicker.CopyButton0bcf4d218cf034e=button
@@ -154,6 +154,7 @@
 ~|~frmDowntime.CopyHBoxproblemCode04762a265862f40=box
 ~|~frmViewMoreInfo.CopyLabel0933d517e58f64b=label
 ~|~frmEditActiveWO.CopyHBoxproblemCode08bca32c8dca142=box
+~|~frmViewMoreInfo.CopyHBox054a7688c99f04c=box
 ~|~frmValveInspection.CopyTextField0172af93a903d4b=textbox2
 ~|~frmViewActiveWO.Button0b6a1c72615e449=button
 ~|~frmCreateWO.hbox1568159912522866=box
@@ -285,6 +286,7 @@
 ~|~popPriorityFilter.cbxPriorityFilter=combobox
 ~|~popupFacSubsys=popup
 ~|~frmViewActiveWO.CopyLabel0be0b2dee77df4e=label
+~|~frmViewMoreInfo.CopyButton0b723d5d72fad4b=button
 ~|~frmViewActiveWO.navAwaitingApproval=button
 ~|~frmCreateWO.CopyLabel0afdef52ce3ec48=label
 ~|~frmViewActiveWO.CopyHBox042c613d0ed6048=box
@@ -320,6 +322,7 @@
 ~|~frmEditActiveWO.CopyLabel0c49c8e9600ed4f=label
 ~|~popupEquipment.seg=segment2
 ~|~frmEditActiveWO.CopyTextField0ebcfb0af7b0743=textbox2
+~|~frmViewMoreInfo.CopyLabel0d5715dadfc7b44=label
 ~|~frmViewAwaitingWO.CopyLabel0f880717279644d=label
 ~|~frmViewMoreInfo.navAwaitingApproval=button
 ~|~frmCreateWO.CopyHBoxproblemCode03e239211b13f46=box
@@ -332,6 +335,7 @@
 ~|~popLongdesc.Label0b2456e8425e14c=label
 ~|~frmViewActiveWO.CopyHBox08795aff42c2347=box
 ~|~frmViewActiveWO.Button08d29ce5c44a44b=button
+~|~frmViewMoreInfo.CopyButton068edc55e30b44f=button
 ~|~frmValveInspection.CopyComboBox0df3e7dfd83464c=combobox
 ~|~popupArea.CopyHBox03c50b568f6cf4d=box
 ~|~popDueDateFilter.CopyButton0bcf4d218cf034e=button
