--- a/widgetinfo.properties
+++ b/widgetinfo.properties
@@ -1,5 +1,5 @@
 #
-#Wed May 28 15:57:00 EDT 2014
+#Wed May 28 17:53:04 EDT 2014
 tablet$0$frmViewMoreInfo.CopyLabel08691d38a20c54c=label
 tablet$0$frmApprovalWOList.navMoreInfo=button
 tablet$0$frmViewMoreInfo.CopyHBox0620cdd4316d042=box
@@ -168,6 +168,7 @@ tablet$0$popDueDateFilter.label1568159912380696=label
 tablet$0$popupSite.btnSelect=button
 tablet$0$popLocationFilter.label1568159912388250=label
 tablet$0$frmMoreInfoList.navActiveWorkOrders=button
+tablet$0$frmViewMoreInfo.CopyButton0b723d5d72fad4b=button
 tablet$0$frmViewActiveWO.CopyLabel04b6703bba78b4f=label
 tablet$0$popWOApproval.CopyButton0b8f8cdb5485741=button
 tablet$0$frmCreateWO.hboxWorkSubtype=box
@@ -215,6 +216,7 @@ tablet$0$frmViewActiveWO.hboxMain=box
 tablet$0$frmViewAwaitingWO.CopyButton06217ec4133174a=button
 tablet$0$popLongdesc.Button02f2cf6b23b9d4d=button
 tablet$0$frmViewMoreInfo.CopyHBox0611ef625d1b346=box
+tablet$0$frmViewMoreInfo.CopyButton068edc55e30b44f=button
 tablet$0$popWOApproval.CopyButton03700868ebd3c4f=button
 tablet$0$popLongdesc=popup
 tablet$0$popupInstrument.btnSelect=button
@@ -224,8 +226,8 @@ tablet$0$popChangeWOStatus.HBox0a4ec2ca4e08040=box
 tablet$0$popupSite.CopyButton0373777d2b4ed48=button
 tablet$0$popupSite=popup
 tablet$0$frmEditActiveWO.CopyLabel02e43cd9934c445=label
-tablet$0$frmViewAwaitingWO.CopyLabel08691d38a20c54c=label
 tablet$0$frmMoreInfoList.Segment06653d08601054e=segment2
+tablet$0$frmViewAwaitingWO.CopyLabel08691d38a20c54c=label
 tablet$0$frmViewAwaitingWO.navActiveWorkOrders=button
 tablet$0$popupArea=popup
 tablet$0$frmValveInspection.CopyComboBox0f2eeb744183b4a=combobox
@@ -459,6 +461,7 @@ tablet$0$frmEditActiveWO.CopyLabel0c49c8e9600ed4f=label
 tablet$0$frmViewActiveWO.CopyButton016b755f7107648=button
 tablet$0$frmCreateWO.Button0862f8d887ce641=button
 tablet$0$frmViewActiveWO.Label0dd01e45bbed64e=label
+tablet$0$frmViewMoreInfo.CopyLabel0d5715dadfc7b44=label
 tablet$0$frmCreateWO.hboxButtons=box
 tablet$0$frmCreateWO.hboxPriority=box
 tablet$0$frmDowntime=form2
@@ -521,6 +524,7 @@ tablet$0$frmValveInspection.CopyHBoxproblemCode03741490f3e2244=box
 tablet$0$popWOApproval.CopyLabel03190e30a9e724f=label
 tablet$0$frmEditActiveWO.CopyLabel0153b3fa9cb4742=label
 tablet$0$popupArea.btnSelect=button
+tablet$0$frmViewMoreInfo.CopyHBox054a7688c99f04c=box
 tablet$0$frmCreateWO.hboxDescription=box
 tablet$0$popupSubEquipment.btnSelect=button
 tablet$0$popupGGS.seg=segment2
