Included Gunndarr's tweaks from GTM.  Attempted to fix locAsset and hierarchy navigation popups by making sure that only explicitly defined keys are in the collection sent to the segment's setData call.  This still works on iPad, but it needs to be tested on Windows 8.

--- a/formicon.properties
+++ b/formicon.properties
@@ -1,4 +1,29 @@
-#Wed May 28 16:03:45 EDT 2014
-dialogs/tablet/popLocationFilter.kl=Native
+#Thu May 29 12:39:55 EDT 2014
+dialogs/tablet/popupSubEquipment.kl=Native
+dialogs/tablet/popupFacSystem.kl=Native
 dialogs/tablet/popPriorityFilter.kl=Native
+dialogs/tablet/popTimePicker.kl=Native
+dialogs/tablet/popChangeWOStatus.kl=Native
+dialogs/tablet/popLongdesc.kl=Native
+forms/tablet/frmDowntime.kl=Native
+dialogs/tablet/popupGGS.kl=Native
+forms/tablet/frmActiveWOList.kl=Native
+forms/tablet/frmCreateWO.kl=Native
+forms/tablet/frmEditActiveWO.kl=Native
+dialogs/tablet/popWOApproval.kl=Native
 dialogs/tablet/popDueDateFilter.kl=Native
+forms/tablet/frmViewMoreInfo.kl=Native
+dialogs/tablet/popupArea.kl=Native
+dialogs/tablet/popupFacility.kl=Native
+dialogs/tablet/popupSite.kl=Native
+forms/tablet/frmMainMenu.kl=Native
+dialogs/tablet/popLocationFilter.kl=Native
+dialogs/tablet/popAttachments.kl=Native
+forms/tablet/frmViewAwaitingWO.kl=Native
+dialogs/tablet/popupFacSubsys.kl=Native
+forms/tablet/frmViewActiveWO.kl=Native
+forms/tablet/frmMoreInfoList.kl=Native
+dialogs/tablet/popupEquipment.kl=Native
+forms/tablet/frmValveInspection.kl=Native
+dialogs/tablet/popupInstrument.kl=Native
+forms/tablet/frmApprovalWOList.kl=Native
