Windows 8 UI Changes
Updated forked skins for better reuse.

--- a/formicon.properties
+++ b/formicon.properties
@@ -1,17 +1,17 @@
-#Thu May 29 12:39:55 EDT 2014
-dialogs/tablet/popupSubEquipment.kl=Native
+#Wed Jun 04 10:09:07 PDT 2014
 dialogs/tablet/popupFacSystem.kl=Native
+dialogs/tablet/popupSubEquipment.kl=Native
 dialogs/tablet/popPriorityFilter.kl=Native
 dialogs/tablet/popTimePicker.kl=Native
 dialogs/tablet/popChangeWOStatus.kl=Native
 dialogs/tablet/popLongdesc.kl=Native
 forms/tablet/frmDowntime.kl=Native
-dialogs/tablet/popupGGS.kl=Native
 forms/tablet/frmActiveWOList.kl=Native
 forms/tablet/frmCreateWO.kl=Native
 forms/tablet/frmEditActiveWO.kl=Native
-dialogs/tablet/popWOApproval.kl=Native
+dialogs/tablet/popupGGS.kl=Native
 dialogs/tablet/popDueDateFilter.kl=Native
+dialogs/tablet/popWOApproval.kl=Native
 forms/tablet/frmViewMoreInfo.kl=Native
 dialogs/tablet/popupArea.kl=Native
 dialogs/tablet/popupFacility.kl=Native
