--- a/upgrade_actions_3.2.properties
+++ b/upgrade_actions_3.2.properties
@@ -1,5 +1,5 @@
 #
-#Thu May 29 18:27:14 EDT 2014
-upgraded_splashimage=true
+#Thu Jun 05 07:45:57 PDT 2014
 upgraded_android_onscreen_key=true
+upgraded_splashimage=true
 upgraded_updatedsplashimage=true
