--- a/upgrade_actions_4.5.properties
+++ b/upgrade_actions_4.5.properties
@@ -1,6 +1,6 @@
 #
-#Thu May 29 18:27:14 EDT 2014
-upgraded_globalsequences=true
+#Thu Jun 05 07:45:57 PDT 2014
 move_headers_footers=true
+upgraded_globalsequences=true
 copy_konylibraryjs_fileName=true
 rename_jsModules_folderName=true
