--- a/upgrade_actions_5.0.properties
+++ b/upgrade_actions_5.0.properties
@@ -1,7 +1,7 @@
 #
-#Thu May 29 18:27:14 EDT 2014
-upgraded_resource_folder_restructure=true
+#Thu Jun 05 07:45:57 PDT 2014
 upgraded_ffi=true
+upgraded_resource_folder_restructure=true
 upgraded_content_alignment_property=true
 upgraded_marginpadding_defaultoverride=true
 upgraded_header_footer_overlap=true
