--- a/defaults/defaults.properties
+++ b/defaults/defaults.properties
@@ -1,6 +1,6 @@
 #
-#Thu May 22 11:03:03 EDT 2014
+#Tue Jun 03 10:25:37 PDT 2014
 KForm.win_transitionMode=Parallel
 KForm.win_outtransition=Slide
-KForm.win_animateheaderfooter=false
 KForm.win_intransition=Slide
+KForm.win_animateheaderfooter=false
