--- a/widgetinfo.properties
+++ b/widgetinfo.properties
@@ -1,5 +1,5 @@
 #
-#Thu May 29 18:27:14 EDT 2014
+#Thu Jun 05 07:45:49 PDT 2014
 tablet$0$frmViewMoreInfo.CopyLabel08691d38a20c54c=label
 tablet$0$frmApprovalWOList.navMoreInfo=button
 tablet$0$frmViewMoreInfo.CopyHBox0620cdd4316d042=box
